# learnedbloomfilter

./: .gitignore  LISENCE  README.md  asci_linear_50.pt  environment_lbf.yml  inset_only_ascii_regression.pt  spec-file.txt  traced_ascii_regression.pt
c++/: CMakeLists-server.txt  CMakeLists.txt  bloom_filter_example01.cpp  explicit_2.csv  explicit_always_false.csv  explicit_lstm_1.csv  learned_bench1.csv  linear_reg_dirty.csv  linear_reg_dirty2.csv  parse_example.cpp  rand_learned_benchmark.cpp  tau_benchmark.cpp  temp.txt  url_learned_benchmark.cpp  valgrind_output.txt
c++/Filters/: custom_dataset.h  learned_bloom.cpp  myUtils.cpp
normalized_data/: counterattempt_normalized.csv  explicit_always_false_normalized.csv  explicit_lstm_1_normalized.csv  fixture1_normalized.csv  laptop_urls_normalized.csv  server_queries_normalized.csv  server_url_output_normalized.csv
old_src/: ascii_regression_classifier.py  benchmark-geek.py  benchmarks.py  bloomfilter.py  train_model.py  utils.py
old_src/models/: model11-03-15:38:38.1  model11-03-15:38:38.10  model11-03-15:38:38.11  model11-03-15:38:38.12  model11-03-15:38:38.13  model11-03-15:38:38.14  model11-03-15:38:38.15  model11-03-15:38:38.16  model11-03-15:38:38.17  model11-03-15:38:38.18  model11-03-15:38:38.2  model11-03-15:38:38.3  model11-03-15:38:38.4  model11-03-15:38:38.5  model11-03-15:38:38.6  model11-03-15:38:38.7  model11-03-15:38:38.8  model11-03-15:38:38.9  model11-03-15:42:22.1  model11-03-15:42:22.2  model11-03-15:44:56.1  model11-03-15:44:56.10  model11-03-15:44:56.2  model11-03-15:44:56.3  model11-03-15:44:56.4  model11-03-15:44:56.5  model11-03-15:44:56.6  model11-03-15:44:56.7  model11-03-15:44:56.8  model11-03-15:44:56.9  model11-03-15:52:12.1  model11-03-15:52:12.2  model11-03-15:52:12.3  model11-03-15:52:12.4  model11-03-15:52:12.5  model11-03-15:52:55.1  model11-03-15:52:55.2  model11-03-15:53:24.1  model11-03-15:53:24.2  model11-03-15:53:24.3  (+24 more)
old_src/pyextension/: bloom_wrapper.cpp  myModule.c  setup.py  testCExtension.py
python/: main.py
python/classifier/: bloom_calc.py  container.py  embedding_cnn.py  embedding_lstm.py  embedding_rnn.py  export_model.py  fixed_length_rnn.py  pytorch_modelsize.py  train.py  utils.py
python/data_intake/: data_loader.py  processing.py
python/logs/20200205-235540/: events.out.tfevents.1580964940.dhcp-18-20-211-102.dyn.mit.edu  log.txt
python/logs/20200217-021831/: events.out.tfevents.1581923911.dhcp-18-21-210-133.dyn.mit.edu
python/logs/20200220-155744/: events.out.tfevents.1582232264.ua-tech  log.txt
python/logs/20200309-001926/: events.out.tfevents.1583727566.ua-tech  log.txt
python/logs/20200414-025659/: events.out.tfevents.1586847419.ua-tech  log.txt
python/logs/20200414-041551/: events.out.tfevents.1586852151.Yaatehs-MacBook-Pro.local
python/logs/20200506-231150/: events.out.tfevents.1588821110.Yaatehs-MacBook-Pro.local
python/logs/20200506-231745/: events.out.tfevents.1588821465.Yaatehs-MacBook-Pro.local  log.txt
python/modelsaves/: explicit_lstm_1.pt  explicit_lstm_1.pth  explicit_lstm_2.pt  explicit_lstm_2.pth  first_run.pth  model__epoch_0_maxlen_124_lr_0.01_loss_0.6935_acc_0.5086_f1_0.5085.pth  model_timestamp_lstm_3_epoch_0_maxlen_19_lr_0.01_loss_0.6977_acc_0.4953_f1_0.358.pth  second_run_train_test_val_split.pth  timestamp_lstm_1.pt  timestamp_lstm_1.pth  traced_lstm_non_homogenized.pt
python/scripts/: explicit_lstm_2_normalized.csv  generate_glove_vectors.py  shallalist_loader.py  time_series_gen.py  url_generator.py  visualize_benchmarks.py  visualize_benchmarks_2.py
